# pg_dumpster

./: .gitignore  Cargo.toml  README.md  justfile
benches/: PERF_DUCKDB.md  restore.rs
fixtures/: .gitignore
fixtures/escaping/: src.sql
fixtures/escaping/snapshots/: escaping.values.csv  escaping.values.tsv  toc.json
fixtures/limit_10/: src.sql
fixtures/limit_10/snapshots/: disclosure.fec_fitem_sched_a_1975_1976.csv  disclosure.fec_fitem_sched_a_1975_1976.tsv
fixtures/limit_100/: src.dump  src.sh
fixtures/limit_100/snapshots/: disclosure.fec_fitem_sched_a_1975_1976.csv  disclosure.fec_fitem_sched_a_1975_1976.tsv
fixtures/limit_1M/: src.sh
fixtures/sched_b_full/: README.md  src.sh
fixtures/toc_basic/: src.sql
fixtures/toc_basic/snapshots/: toc.json
scripts/: gen_dump.sh
src/: arrow_tsv.rs  entries.rs  http_range_reader.rs  lib.rs  main.rs  profiling.rs  reader.rs  toc.rs  tsv.rs  util.rs
src/table_read/: mod.rs
src/test_utils/: case.rs  mod.rs  snapshot.rs
tests/: test_table_read.rs  test_toc.rs
