[package]
name = "pg_dumpster"
version = "0.1.0"
edition = "2024"
default-run = "pg_dumpster"

[features]
profiling = []

[dependencies]
anyhow = "1.0.102"
arrow = "58"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
csv = "1.4.0"
parquet = { version = "58", features = ["arrow", "snap"] }
flate2 = "1.1.9"
glob = "0.3.3"
rayon = "1"
# libpgdump = "2.1.0"
libpgdump = { git = "https://github.com/NickCrews/libpgdump", rev = "17364a5d6c25e8899fbe18ac5ac8030e7fb47e2b" }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde_json = "1"
tempfile = "3.27.0"

[dev-dependencies]
anyhow = "1.0.102"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.27.0"

[profile.bench]
opt-level = 3
debug = true

[profile.profiling]
inherits = "bench"

[[bench]]
name = "restore"
harness = false
